===============================================================================
2003-11-26                       v1.4.1 release
===============================================================================

2003-11-24  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-final-cvs-b2

	* Changed font colour for redmarble popup.

2003-11-21  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-final-cvs-b1

	* Spelling corrections.

	* Re-added $Id to slideshow.php.

	* Note, these changes will not require RC5.  

2003-11-20  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-RC4

	* v1.4.1 Release Candidate 4

2003-11-20  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-RC4-cvs-b23

	* Updated EZ Prints form to new API in view_photo.php.

2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b22

	* Tweaked text.  Hopefully last change before RC4.

2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b21

	* Tweaked tools/build_manifest to make it simpler, and clearer.

	* Updated manifest.inc.

2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b20

	* Added check_versions to gallery check page, to check that gallery
	  is up-to-date before running.

	* Modified checkVersions to return ($success, $fail, $warn)

	* Fixed potential warning in setup/check.inc.

2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b19

	* Moved checkVersions() to util.php, and fixed a logical bug in it.  
	  Also added some improvements to it's behaviour from HEAD.

2003-11-19 Jens Tkotz <jens@peino.de> 1.4.1-RC4-cvs-b18

	* Bugfix: Change Parameter for check imagemagick to -version.

2003-11-18 Jens Tkotz <jens@peino.de> 1.4.1-RC4-cvs-b17

	* Bugfix: In Windows in some diagnostic files fs_win32.php 
		  was called twice.

	* Bugfix: Disabled one little translation, because at that time _()
		  is undefined when PHP has no gettext. To really fix this a
		  bigger change were needed.

