@@ -59,6 +59,19 @@ if (empty($register_globals) ||
  * namespace.  
  */
 if (!$gallery->register_globals) {
+
+    /*
+     * Prevent hackers from overwriting one HTTP_ global using another one.  For example,
+     * appending "?HTTP_POST_VARS[GALLERY_BASEDIR]=xxx" to the url would cause extract
+     * to overwrite HTTP_POST_VARS when it extracts HTTP_GET_VARS
+     */
+    $scrubList = array('HTTP_GET_VARS', 'HTTP_POST_VARS', 'HTTP_COOKIE_VARS', 'HTTP_POST_FILES');
+    foreach ($scrubList as $outer) {
+	foreach ($scrubList as $inner) {
+	    unset(${$outer}[$inner]);
+	}
+    }
+    
     if (is_array($HTTP_GET_VARS)) {
 	extract($HTTP_GET_VARS);
     }
