@@ -1,4 +1,14 @@
 ===============================================================================
+2004-01-24                       v1.4.1-p1 release
+===============================================================================
+
+2004-01-24  Bharat Mediratta  <bharat@menalto.com> 1.4.1-p1
+
+        * Fixed remote security exploit in init.php and setup/init.php where 
+	  one extract() call can be used to overwrite the input for a 
+	  subsequent extract() call letting users overwrite
+
+===============================================================================
 2003-11-26                       v1.4.1 release
 ===============================================================================
 
